# bigIsland

./: Dockerfile  Dockerfile_network  README.md  ansible.md  dev_setup.md  discovery.md  docker.md  kubernetes.md  magpie.md  pyproject.toml  python.md  requirements.txt  sheet.md  spyder.md  spyder.sh
discovery/src/: CSVParser.py  JSONParser.md  JSONParser.py  ProtoParser.py  ProtoParserWorking.py  XMLParser.py  discovery.py  extra.py  jsonschemadiscovery.py  parser.py
hallelujah/: congregation.py  hallelu.py  hallelujah.md  hallelujah.py  jah.py  root.py  worksheet_manager.py
hallelujah/cmds/: archive.py  cmd.py  files.py  loadf.py  test.py  test_cmd.py  test_files.py  test_loadf.py
magpie/src/: mIPTree.py  mJSONStore.py  mSquishedInt.py  mTimer.py  marchiver.py  matchTitles.py  mdigittree.py  mgrep.py  mistype.py  mjournal.py  mlogger.py  mthreads.py  mudp.py  mudpAndGIL.md  musage.py  mwildstring.py  mworksheets.py  mzdatetime.py  test_marchiver.py
model/: model.json
scripts/: cfi.sh  cleanup.sh  client.sh  congregation.sh  congregation_cleanup.sh  hallelulajah.sh  server.sh  sheet.sh  test.sh
sheet/: Grid.py  QueryParams.py  Sheet.py  ci.py  filter.py  input.py  result.py  transform.py  wi.py  wi.y  wi_clock_example.py
sheet/inputs/: Discovery.py  Filter.py  Load.py  Test.py  __init__.py
spyder-py3/: history.py  pdb_history.sqlite  profiler.results  pylint.results  spyder.ini  spyder.ini.bak  workingdir
src/: Makefile  MultiRegexExclusiveSearch.java  MultiWordSearch.java
worksheets/: directory.json  samples.json  test.json  worksheetHelp.json
(+49 files in other folders)
